feat: add stock recommendations based on criteria

--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
             </div>
         </header>
 
+        <!-- Recommendations Section -->
+        <section class="recommendations-section" id="recommendationsSection">
+            <h3 class="recommendations-title"><i class="ri-thumb-up-line"></i> 오늘의 매수 추천 후보군</h3>
+            <div class="recommendation-cards" id="recommendationCards">
+                <!-- Recommended stock cards will be inserted here -->
+            </div>
+            <p id="noRecommendationsMessage" class="no-recommendations" style="display: none;">매수 추천 종목 없음</p>
+        </section>
+
         <!-- Main Content Section -->
         <main class="main-content">
             <div class="section-header">
