feat: implement CSV download and remove filter button

--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
                             </ul>
                         </div>
                     </div>
-                    <button class="action-btn"><i class="ri-filter-3-line"></i> 필터</button>
-                    <button class="action-btn"><i class="ri-download-line"></i> 다운로드</button>
+                    <button class="action-btn" id="downloadBtn"><i class="ri-download-line"></i> 다운로드</button>
                 </div>
             </div>
 
