fix(table): rename index column to 구분 and verify layout

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <table class="stock-table" id="stockTable">
                     <thead>
                         <tr>
-                            <th class="sticky-col index-col">#</th>
+                            <th class="sticky-col index-col">구분</th>
                             <th class="sticky-col sortable" data-sort="ticker">티커 <i
                                     class="ri-expand-up-down-line sort-icon"></i></th>
                             <th class="sortable" data-sort="name">기업명 <i class="ri-expand-up-down-line sort-icon"></i>
